# LearningMedia

./: settings.gradle
CameraFilter/: build.gradle
CameraFilter/src/main/res/raw/: blur_fragment.glsl  default_fragment.glsl  default_vert.glsl  hue_fragment.glsl  normal_vertex.glsl
WebrtcSample/: build.gradle
WebrtcSample/src/main/: AndroidManifest.xml
WebrtcSample/src/main/res/drawable/: av_hangup_selector.xml  av_switch_camera_selector.xml  av_video_answer_selector.xml
WebrtcSample/src/main/res/layout/: activity_call_connected.xml  activity_call_incoming.xml  activity_call_outgoing.xml  activity_main.xml  fragment_video.xml
WebrtcSample/src/main/res/values/: colors.xml  strings.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_player_jni.cpp  audio_resample_jni.cpp  config.h  ff_audio_player.cpp  ff_audio_player.h  ff_audio_resample.cpp  ff_audio_resample.h  ff_audio_resampler.h  ff_rtmp_pusher.cpp  ff_rtmp_pusher.h  ffmeg_command_jni.cpp  ffmpeg_push_jni.cpp  hello_media.cpp  log_helper.h  native-lib.cpp
app/src/main/cpp/FFmpegPlayer/: CMakeLists.txt
app/src/main/cpp/FFmpegPlayer/android/: FFmpegPlayer.cpp  FFmpegPlayer.h  com_frank_media_FFmpegPlayer.cpp
app/src/main/cpp/FFmpegPlayer/kernel/avsync/: AVSync.cpp  AVSync.h  MediaClock.cpp  MediaClock.h
app/src/main/cpp/FFmpegPlayer/kernel/player/: MediaPlayer.cpp  MediaPlayer.h  PlayerParam.cpp  PlayerParam.h
app/src/main/cpp/ffmpeg/: cmdutils.c  cmdutils.h  ffmpeg.c  ffmpeg.h  opt_common.c  opt_common.h
app/src/main/res/layout/: activity_camera_filter.xml  activity_equalizer.xml  activity_main.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
living/: CMakeLists.txt  build.gradle
living/src/main/: AndroidManifest.xml
living/src/main/cpp/: AudioStream.cpp  AudioStream.h  LogHelper.h  PacketQueue.h  RtmpPushStream.cpp  VideoStream.cpp  VideoStream.h
living/src/main/java/com/frank/living/: LivePusher.java  MainActivity.java
living/src/main/java/com/frank/living/camera/: Camera2Helper.java  Camera2Listener.java
living/src/main/java/com/frank/living/handler/: ConnectionReceiver.java  OrientationHandler.java
living/src/main/java/com/frank/living/listener/: LiveStateChangeListener.java  OnFrameDataCallback.java  OnNetworkChangeListener.java
living/src/main/java/com/frank/living/param/: AudioParam.java  VideoParam.java
living/src/main/java/com/frank/living/stream/: AudioChannelStream.java  VideoChannelStream.java  VideoStreamBase.java
living/src/main/java/com/frank/living/util/: YUVUtil.java
living/src/main/res/layout/: activity_main.xml
living/src/main/res/values/: strings.xml  themes.xml
videoedit/: build.gradle
videoedit/src/main/: AndroidManifest.xml
videoedit/src/main/assets/: fragment_bitmap_overlay_es2.glsl  fragment_contrast_es2.glsl  fragment_hsl_es2.glsl  fragment_oetf_es3.glsl  fragment_transform_es2.glsl  fragment_transform_external_yuv_es3.glsl  fragment_transform_sdr_external_es2.glsl  fragment_transform_sdr_oetf_es2.glsl  fragment_vignette_es2.glsl  vertex_copy_es2.glsl  vertex_transform_es2.glsl  vertex_transform_es3.glsl
(+157 files in other folders)
